<resources>
    <string name="app_name">Place Search</string>
    <string name="tab_text_1">SEARCH</string>
    <string name="tab_text_2">FAVORTIES</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="keyword">Keyword</string>
    <string name="keywordHint">Enter keyword</string>
    <string name="category">Category</string>
    <string name="distance">Distance (in miles)</string>
    <string name="distanceHint">Enter distance (default 10 miles)</string>
    <string name="from">From</string>
    <string name="current">Current location</string>
    <string name="other">Other. Specify Location</string>
    <string name="locationHint">Type in the Location</string>
    <string name="searchBtn">SEARCH</string>
    <string name="clearBtn">CLEAR</string>
    <string name="validation">Please enter mandatory field</string>
    <string name="pre">PREVIOUS</string>
    <string name="next">NEXT</string>
    <string name="infoAdd">Address</string>
    <string name="infoPhone">Phone Number</string>
    <string name="infoPrice">Price Level</string>
    <string name="infoRating">Rating</string>
    <string name="infoGooglePage">Google Page</string>
    <string name="infoWebsite">Website</string>
    <string name="travelMode">Travel mode</string>

    <string-array name="mode">
        <item>Driving</item>
        <item>Bicycling</item>
        <item>Transit</item>
        <item>Walking</item>
    </string-array>

    <string-array name="reviewSource">
        <item>Google reviews</item>
        <item>Yelp reviews</item>
    </string-array>

    <string-array name="reviewSort">
        <item>Default order</item>
        <item>Highest rating</item>
        <item>Lowest rating</item>
        <item>Most recent</item>
        <item>Least recent</item>
    </string-array>

    <string-array name="category">
        <item>Default</item>
        <item>Airport</item>
        <item>Amusement Park</item>
        <item>Aquarium</item>
        <item>Art Gallery</item>
        <item>Bakery</item>
        <item>Bar</item>
        <item>Beauty Salon</item>
        <item>Bowling Alley</item>
        <item>Bus Station</item>
        <item>Cafe</item>
        <item>Campground</item>
        <item>Car Rental</item>
        <item>Casino</item>
        <item>Lodging</item>
        <item>Movie Theater</item>
        <item>Museum</item>
        <item>Night Club</item>
        <item>Park</item>
        <item>Parking</item>
        <item>Restaurant</item>
        <item>Shopping Mall</item>
        <item>Stadium</item>
        <item>Subway Station</item>
        <item>Taxi Stand</item>
        <item>Train Station</item>
        <item>Transit Station</item>
        <item>Travel Agency</item>
        <item>Zoo</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail">detail</string>
    <string name="tab_text_3">Tab 3</string>
</resources>
