<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="8"
    android:padding="15dp"
    android:orientation="vertical"
    tools:context=".Tab1">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/keyword"
        android:labelFor="@id/keyword"/>
    <TextView
        android:id="@+id/validation1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/validation"
        android:textColor="@color/colorValidation"
        android:visibility="gone" />
    <EditText
        android:id="@+id/keyword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/keywordHint"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:labelFor="@id/category"/>
    <Spinner
        android:id="@+id/category"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/category">
    </Spinner>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/distance"
        android:labelFor="@id/distance"/>
    <EditText
        android:id="@+id/distance"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/distanceHint"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/from"
        android:labelFor="@id/location"/>
    <RadioGroup
        android:id="@+id/location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@id/current"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/current"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/current"/>
        <RadioButton
            android:id="@+id/other"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/other"/>
    </RadioGroup>
    <TextView
        android:id="@+id/validation2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/validation"
        android:textColor="@color/colorValidation"
        android:visibility="gone"/>
    <AutoCompleteTextView
        android:id="@+id/autoComplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:enabled="false"
        android:focusableInTouchMode="false"
        android:hint="@string/locationHint"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/search"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/searchBtn"/>
        <Button
            android:id="@+id/clear"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/clearBtn"/>
    </LinearLayout>

    <TextView
        android:id="@+id/volloyTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>
</LinearLayout>

